<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_scrolling">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="?attr/actionBarSize"
        android:orientation="vertical">
        //el layout marginButton hace que se ponga por encina de la actionBar y sea bien visivle el boton

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_padding_min"
            android:layout_marginTop="@dimen/common_padding_min"
            android:layout_marginEnd="@dimen/common_padding_min"
            android:clickable="true"
            android:focusable="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/common_padding_default"
                android:paddingTop="@dimen/common_padding_default"
                android:paddingEnd="@dimen/common_padding_default">

                <ImageView
                    android:id="@+id/img_Card"
                    android:layout_width="@dimen/card_img_size"
                    android:layout_height="@dimen/card_img_size"
                    android:importantForAccessibility="no"
                    android:src="@mipmap/ic_launcher"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnBuy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/common_padding_min"
                    android:text="@string/card_btn_buy"
                    app:icon="@drawable/ic_shop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/img_Card" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnSkip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/card_btn_skip"
                    app:layout_constraintEnd_toStartOf="@id/btnBuy"
                    app:layout_constraintTop_toTopOf="@id/btnBuy"
                    style="@style/Widget.MaterialComponents.Button.TextButton"/>

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/common_padding_default"
                    android:text="@string/card_Title"
                    android:textAppearance="?attr/textAppearanceHeadline5"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/img_Card"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:ellipsize="end"
                    android:maxLines="3"
                    android:text="@string/large_text"
                    android:textAppearance="?attr/textAppearanceBody1"
                    app:layout_constraintBottom_toBottomOf="@id/img_Card"
                    app:layout_constraintEnd_toEndOf="@id/tvTitle"
                    app:layout_constraintStart_toStartOf="@id/tvTitle"
                    app:layout_constraintTop_toBottomOf="@id/tvTitle" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardAd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_padding_min"
            android:layout_marginTop="@dimen/common_padding_min"
            android:layout_marginEnd="@dimen/common_padding_min"
            android:visibility="visible"
            android:clickable="true"
            android:focusable="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imgCover"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/card_img_cover_height"
                    android:background="@color/design_default_color_secondary"
                    android:visibility="gone"
                    android:importantForAccessibility="no"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvTitleAlt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/common_padding_default"
                    android:text="@string/card_Title"
                    android:textAppearance="?attr/textAppearanceHeadline5"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/imgCover" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilUrl"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/common_padding_default"
                    android:hint="image URL"
                    app:endIconMode="clear_text"
                    app:helperText="@string/card_requerido"
                    app:layout_constraintEnd_toEndOf="@id/tvTitleAlt"
                    app:layout_constraintStart_toStartOf="@id/tvTitleAlt"
                    app:layout_constraintTop_toBottomOf="@id/tvTitleAlt">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etUrl"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/card_input_url"
                        android:inputType="textUri" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilPassword"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/common_padding_default"
                    android:enabled="false"
                    android:hint="@string/card_Password"
                    app:endIconMode="password_toggle"
                    app:layout_constraintEnd_toEndOf="@id/tvTitleAlt"
                    app:layout_constraintStart_toStartOf="@id/tvTitleAlt"
                    app:layout_constraintTop_toBottomOf="@id/tilUrl">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/card_Password"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/cbEnalePass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/card_enable_Pass"
                    app:layout_constraintStart_toStartOf="@id/tvTitleAlt"
                    app:layout_constraintTop_toBottomOf="@+id/tilPassword" />
                <View
                    android:id="@+id/divider"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/common_padding_middle"
                    android:background="@color/color_divider"
                    app:layout_constraintStart_toStartOf="@id/tvTitleAlt"
                    app:layout_constraintEnd_toEndOf="@id/tvTitleAlt"
                    app:layout_constraintTop_toBottomOf="@id/cbEnalePass"/>

                <TextView
                    android:id="@+id/tvSubtitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/sub_titulo"
                    android:textAppearance="?attr/textAppearanceSubtitle1"
                    android:layout_marginTop="@dimen/common_padding_middle"
                    app:layout_constraintStart_toStartOf="@id/tvTitleAlt"
                    app:layout_constraintEnd_toEndOf="@id/tvTitleAlt"
                    app:layout_constraintTop_toBottomOf="@id/divider"/>

                <TextView
                    android:id="@+id/tvMessageAlt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/sub_parrafo"
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:maxLines="5"
                    android:ellipsize="end"
                    android:layout_marginTop="@dimen/common_padding_default"
                    app:layout_constraintStart_toStartOf="@id/tvTitleAlt"
                    app:layout_constraintEnd_toEndOf="@id/tvTitleAlt"
                    app:layout_constraintTop_toBottomOf="@id/tvSubtitle"/>

                <com.google.android.material.button.MaterialButtonToggleGroup
                    android:id="@+id/togleBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/common_padding_default"
                    app:singleSelection="true"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvMessageAlt">

                    //singleSeleccion hace que solo se seleccione un boton a la vez

                    <Button
                        android:id="@+id/btnRed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/card_Toogle_red"
                        style="?attr/materialButtonOutlinedStyle"/>

                    <Button
                        android:id="@+id/btnGreen"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/card_Toogle_Green"
                        style="?attr/materialButtonOutlinedStyle"/>

                    <Button
                        android:id="@+id/btnBlue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/card_Toogle_Blue"
                        style="?attr/materialButtonOutlinedStyle"/>

                </com.google.android.material.button.MaterialButtonToggleGroup>
                <com.google.android.material.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/card_btn_skip"
                    android:layout_marginTop="@dimen/common_padding_middle"
                    android:layout_marginBottom="@dimen/common_padding_min"
                    app:layout_constraintEnd_toEndOf="@+id/tvTitleAlt"
                    app:layout_constraintTop_toBottomOf="@+id/togleBtn"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>